# konnect

./: .gitignore  README.md  pyproject.toml  requirements.txt
klipperscreen/: konnect.conf
klipperscreen/panels/: konnect.py
konnect/: __init__.py  __main__.py  _http_spy.py  actions.py  camera.py  config.py  db.py  encrypted_download.py  models.py  modern_fs.py  moonraker.py  printer.py  printer_types.py  util.py  web.py
konnect/static/: index.html  konnect.css  konnect.js
scripts/: bootstrap.sh  install.sh  konnect-moonraker.cfg  konnect.cfg.sample  konnect.service  status.sh  uninstall.sh
